--- a/magang_2025/CMakeLists.txt
+++ b/magang_2025/CMakeLists.txt
@@ -18,14 +18,9 @@ install(PROGRAMS
   DESTINATION lib/${PROJECT_NAME}
 )
 
-# Install launch files
+# Install directories
 install(DIRECTORY
   launch
-  DESTINATION share/${PROJECT_NAME}/
-)
-
-# Install config files
-install(DIRECTORY
   config
   DESTINATION share/${PROJECT_NAME}/
 )
